# r3dir

./: .gitignore  Dockerfile  PYPIREADME.md  README.md  docker-compose.yml  hackvector_tag.json  hackvector_tag.py  hackvertor_tag.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
app/: server.py  setup_cli.py
app/coder/: exceptions.py  redirect_encoder.py  test_redirect_encoder.py
r3dir/: _cli.py  encoder.py  exceptions.py
r3dir/hackvertor/: encoder.js  encoder.test.js
server/: app.py
tests/: test_encoder.py
